Removed some warnings (Preperation for Java 9)