@@ -31,7 +31,7 @@ public class TestInfinity extends TestFunctionAbstract {
 	
 	@Test(expected = NoRepresentationAvailableException.class)
 	public void testInfinityBoolean() throws EvaluatorException, OpenMathException {
-		assertEquals(new Boolean(true), func.getPartialBooleanSyntax(new ArrayList<>()));
+		assertEquals(Boolean.valueOf(true), func.getPartialBooleanSyntax(new ArrayList<>()));
 	}
 
 	@Test
